extend hosts api
